[package]
name = "kadis"
version = "0.1.0"
authors = ["GiraffeKey <giraffekey@tutanota.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
bincode = "1.2"
log = "0.4"
serde = "1.0"
subotai = { version = "1.0.4-pre", git = "https://github.com/GiraffeKey/subotai" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
simple_logger = "1.11"
