[package]
name = "kadis"
version = "0.1.0"
authors = ["GiraffeKey <giraffekey@tutanota.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
async-std = "1.8"
bincode = "1.2"
fnv = "1.0"
futures = "0.3"
libp2p = "0.32"
log = "0.4"
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
simple_logger = "1.11"
